--- a/src/assets/sass/header.scss
+++ b/src/assets/sass/header.scss
@@ -1,3 +1,6 @@
+@import "breakpoints";
+@import 'buttons';
+
 #banner {
   min-height: 750px;
   width: 100%;
@@ -6,45 +9,56 @@
   background-size: cover;
   background-repeat: no-repeat;
 
-  #bannerContentWrapper {
-    width: 100%;
-    max-width: 1170px;
-    margin: 0 auto;
-    #pageHeader {
-      .header-content {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        border-bottom: 1px solid rgba(255, 255, 255, 0.15);
+}
+.pageHeader {
+  position: fixed;
+  z-index: 1000;
+  top: 0;
+  left: 0;
+  right: 0;
+  .header-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 38.5px 0;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.15);
+    transition: padding 0.3s;
 
-        .main-nav {
-          display: flex;
-          justify-content: space-between;
-          width: 538.64px;
+    .main-nav {
 
-          li {
-            padding: 42.5px 0;
-            margin: 0;
+      display: flex;
+      justify-content: space-between;
+      width: 538.64px;
+      @media screen and (max-width: $lg) {
+        display: none;
+      }
 
-            a {
-              text-transform: uppercase;
-              color: rgba(255, 255, 255, 0.75);
-              font: 13px Raleway, sans-serif;
-              font-weight: 700;
-            }
-            a:hover {
-              color: #fff;
-            }
-          }
+      li {
+        margin: 0;
+
+        a {
+          text-transform: uppercase;
+          color: rgba(255, 255, 255, 0.75);
+          font: 13px Raleway, sans-serif;
+          font-weight: 700;
+
+        }
+
+        a:hover {
+          color: #fff;
         }
       }
     }
+  }
+}
+
+
 
     .bannerContent {
       text-align: center;
       max-width: 920px;
       width: 100%;
-      margin: 148px auto 80px;
+      margin: 148px auto;
 
       p {
         color: #fff;
@@ -58,6 +72,8 @@
         margin-bottom: 10px;
 
         h1 {
+          display: block;
+          padding-top: 100px;
           color: #fff;
           font-family: "Open Sans", sans-serif;
           font-size: 65px;
@@ -67,26 +83,17 @@
         }
       }
     }
-  }
-}
 
-.btn {
-  background-color: #e84545;
-  color: #fff;
-  font-size: 13px;
-  font-weight: 600;
-  border: 0;
-  display: inline-block;
-  text-transform: uppercase;
-  padding: 15px 40px;
-  margin-bottom: 0;
-  line-height: 1.42857143;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: middle;
-  cursor: pointer;
-}
-.btn:hover, .btn:focus {
-  background-color: #e52e2e;
-  color: #fff;
-}
+.headerOnScroll {
+  background-color: #292c47;
+  position: fixed;
+
+  .header-content{
+    padding: 25px 0 !important;
+    transition: padding 0.3s;
+    border: none !important;
+    }
+  }
+
+
+
