--- a/src/assets/sass/projects.scss
+++ b/src/assets/sass/projects.scss
@@ -63,6 +63,10 @@
   transition-duration: 400ms;
 }
 
+.overlayViewContainer {
+  display: none;
+}
+
 .overlayViewContainerOpened{
   display: flex;
   position: fixed;
