--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -17,6 +17,8 @@ body {
   flex-direction: column;
   font-family: 'Raleway', sans-serif;
   font-weight: 400;
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 .socialIcons, .footerItem a {
