added workers section and fixed slider bugs

--- a/src/assets/sass/header.scss
+++ b/src/assets/sass/header.scss
@@ -8,6 +8,7 @@
   background-position: center top;
   background-size: cover;
   background-repeat: no-repeat;
+  padding: 0 12px;
 
   .pageHeader {
     position: fixed;
