--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -4,8 +4,10 @@
 @import 'footer';
 @import 'features';
 @import 'projects';
+@import 'teamEmployees';
 @import 'download';
 @import 'testimonials';
+
 
 *{
   box-sizing: border-box;
