OnePageSite is ready for checking

--- a/src/assets/sass/toggleMenu.scss
+++ b/src/assets/sass/toggleMenu.scss
@@ -16,7 +16,7 @@
   display: block;
   position: relative;
   top: 25%;
-  left: calc(50% - 57.5px);
+  left: calc(50% - 5vw);
   li{
     display: block;
     margin-bottom: 20px;
