--- a/src/assets/sass/teamEmployees.scss
+++ b/src/assets/sass/teamEmployees.scss
@@ -74,17 +74,27 @@
 }
 
 .social-icons{
-  margin-top: 30px;
-  a{
-    border: 1px solid #e8ecee;
-    border-radius: 2px;
-    color: #c6cacc;
-    display: block;
-    font-size: 18px;
-    height: 40px;
-    line-height: 40px;
-    margin-right: 5px;
-    text-align: center;
-    width: 40px;
+  margin: 30px 0;
+  display: flex;
+  justify-content: center;
+  li:hover a{
+    background: #E84545;
+    border-color: #E84545;
+    color: #fff;
   }
+  li{
+    a{
+      border: 1px solid #e8ecee;
+      border-radius: 2px;
+      color: #c6cacc;
+      display: block;
+      font-size: 18px;
+      height: 40px;
+      line-height: 40px;
+      margin-right: 5px;
+      text-align: center;
+      width: 40px;
+    }
+  }
+
   }
