--- a/src/assets/sass/buttons.scss
+++ b/src/assets/sass/buttons.scss
@@ -1,12 +1,14 @@
+@import 'scss-variables';
+
 .btn {
-  background-color: #e84545;
-  color: #fff;
+  background-color: $accent-color;
+  color: $wh-color;
   font-size: 13px;
-  font-weight: 600;
+  font-weight: $common-font-weight;
   border: 0;
   display: inline-block;
   text-transform: uppercase;
-  padding: 15px 40px;
+  padding: $common-value-pd-mg-wd-hg 40px;
   margin-bottom: 0;
   line-height: 1.42857143;
   text-align: center;
@@ -16,5 +18,5 @@
 }
 .btn:hover, .btn:focus {
   background-color: #e52e2e;
-  color: #fff;
+  color: $wh-color;
 }
