--- a/src/assets/sass/teamEmployees.scss
+++ b/src/assets/sass/teamEmployees.scss
@@ -1,4 +1,5 @@
 @import 'breakpoints';
+@import 'scss-variables';
 
 .teams{
   padding: 100px 50px;
@@ -29,11 +30,11 @@
       width: calc(50%- 75px);
     }
     @media screen and (max-width: $sm) {
-      width: 100%;
+      width: $full-size-of-parent;
     }
     img {
       display: block;
-      max-width: 100%;
+      max-width: $full-size-of-parent;
       height: auto;
       margin: 0 auto;
     }
@@ -63,7 +64,7 @@
           display: block;
           text-align: center;
           margin-bottom: 10px;
-          font-size: 14px;
+          font-size: $common-font-size;
           line-height: 22.4px;
           color: #6c7279;
 
