--- a/src/assets/sass/testimonials.scss
+++ b/src/assets/sass/testimonials.scss
@@ -1,4 +1,6 @@
 @import 'breakpoints';
+@import 'scss-variables';
+
   .sliderContainer {
     display: flex;
     justify-content: space-between;
@@ -10,7 +12,7 @@
     }
 
     #sliderBlockquote{
-      padding-left: 10px;
+      padding: 0 10px;
       width: 50%;
       display: block;
       margin-top: 50px;
@@ -20,18 +22,19 @@
       .aboutPerson {
         margin-top: 20px;
         height: 150px;
+        height: 250px;
         p {
           display: block;
-          color: #fff;
+          color: $wh-color;
           font: italic 36px "Cardo", Georgia, "Times New Roman", serif;
         }
       }
       cite{
-        color: #fff;
+        color: $wh-color;
         display: block;
         font-size: 13px;
         font-style: normal;
-        font-weight: 600;
+        font-weight: $common-font-weight;
         margin-top: 30px;
         text-transform: uppercase;
       }
@@ -43,8 +46,8 @@
         justify-content: space-between;
         align-items: center;
         .circleBtn {
-          width: 15px;
-          height: 15px;
+          width: $common-value-pd-mg-wd-hg;
+          height: $common-value-pd-mg-wd-hg;
           border-radius: 50%;
           opacity: 0.3;
           background: white;
@@ -66,12 +69,12 @@
       max-width: 50%;
       overflow: hidden;
       @media screen and (max-width: $md) {
-       max-width: 100%;
+       max-width: $full-size-of-parent;
       }
       .testimonialImage {
         opacity: 1;
-        width: 100%;
-        height: 100%;
+        width: $full-size-of-parent;
+        height: $full-size-of-parent;
         object-fit: cover;
         object-position: center;
         transition: 0.5s opacity;
