--- a/src/assets/sass/toggleMenu.scss
+++ b/src/assets/sass/toggleMenu.scss
@@ -1,12 +1,13 @@
 @import 'breakpoints';
+@import 'scss-variables';
 
 .navigation-open {
   opacity: 0.9;
   transition: opacity 0.5s;
   position: fixed;
   background-color: #000;
-  width: 100%;
-  height: 100%;
+  width: $full-size-of-parent;
+  height: $full-size-of-parent;
   top: 0;
   left: 0;
   z-index: 99999;
@@ -24,11 +25,11 @@
       text-transform: uppercase;
       color: rgba(255, 255, 255, 0.75);
       font: 25px Raleway, sans-serif;
-      font-weight: 700;
+      font-weight: $very-common-font-weight;
 
     }
     a:hover {
-      color: #fff;
+      color: $wh-color;
     }
   }
 }
@@ -38,7 +39,7 @@
   div{
     width: 18px;
     height: 3px;
-    background: #fff;
+    background: $wh-color;
     margin-bottom: 3px;
     transform-origin: left center;
   }
@@ -54,7 +55,7 @@
     position: absolute;
     top: calc(50% - 22px);
     right: 10px;
-    background-color: #e84545;
+    background-color: $accent-color;
     border-radius: 50%;
     cursor: pointer;
   }
