--- a/src/assets/sass/testimonials.scss
+++ b/src/assets/sass/testimonials.scss
@@ -2,84 +2,100 @@
 @import 'scss-variables';
 
 .sliderContainer {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  background: #523649;
-  @media screen and (max-width: $md) {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  #sliderBlockquote{
-    padding: 0 20px;
-    width: 50%;
-    display: block;
-    margin-top: 50px;
-    @media screen and (max-width: $md) {
-      width: 90%;
-    }
-    .aboutPerson {
-      margin-top: 20px;
-      height: 250px;
-      p {
-        display: block;
-        color: $wh-color;
-        font: italic 36px "Cardo", Georgia, "Times New Roman", serif;
-      }
-    }
-    cite{
-      color: $wh-color;
-      display: block;
-      font-size: 13px;
-      font-style: normal;
-      font-weight: $common-font-weight;
-      margin-top: 30px;
-      text-transform: uppercase;
-    }
-
-    .circleBtnContainer{
-      margin: 30px auto;
-      display: flex;
-      width: 40px;
-      justify-content: space-between;
-      align-items: center;
-      .circleBtn {
-        width: $common-value-pd-mg-wd-hg;
-        height: $common-value-pd-mg-wd-hg;
-        border-radius: 50%;
-        opacity: 0.3;
-        background: white;
-        cursor: pointer;
-      }
-      .circleBtn:hover{
-        opacity: 1;
-      }
-
-      .activeCircleBtn{
-        cursor: default !important;
-        opacity: 1;
-      }
-    }
-
-  }
-
-  .testimonialImageContainer {
-    max-width: 50%;
+  background: #53354A;
+  width: 100%;
+  div{
+    display: flex;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
-    @media screen and (max-width: $md) {
-      max-width: $full-size-of-parent;
+  }
+  @media screen and (max-width: $lg)
+     {
+      flex-direction: column;
     }
-    .testimonialImage {
-      opacity: 1;
-      width: $full-size-of-parent;
-      height: $full-size-of-parent;
-      object-fit: cover;
-      object-position: center;
-      transition: 0.5s opacity;
-    }
+
+}
+
+.sliderImageContainer {
+  width: 50%;
+  max-height: 475px;
+  overflow: hidden;
+  opacity: 1;
+  transition: 0.4s opacity;
+  @media screen and (max-width: $lg) {
+    width: 100%;
+    height: 50%;
+  }
+
+  img {
+    opacity: 1;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
   }
 }
+
+
+
+.sliderInfoContainer {
+  width: 50%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  padding: 100px 145px;
+  @media screen and (max-width: $lg)
+  {
+    width: 100%;
+    height: 50%;
+    min-height: 200px;
+  }
+  @media screen and (max-width: $md)
+  {
+    min-height: 400px;
+  }
+  p{
+    color: #fff;
+    font: italic 36px "Cardo", Georgia, "Times New Roman", serif;
+  }
+  span{
+    color: #fff;
+    font-size: 13px;
+    font-weight: 600;
+    margin-top: 30px;
+    text-transform: uppercase;
+  }
+}
+
+.sliderNavigation {
+  position: absolute;
+  bottom: 7%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+  div{
+    width: 13px;
+    height: 13px;
+    border-radius: 50%;
+    background: #755D6E;
+    transition: 0.3s background;
+    cursor: pointer;
+    :hover{
+      background: #fff;
+    }
+  }
+  div + div{
+    margin-left: 10px;
+  }
+}
+
+.activeSlide {
+  background: #fff !important;
+}
+
 
 .fade{
   opacity: 0 !important;
