--- a/src/assets/sass/teamEmployees.scss
+++ b/src/assets/sass/teamEmployees.scss
@@ -1,13 +1,15 @@
 @import 'breakpoints';
 @import 'scss-variables';
 
-.teams{
+.teams {
   padding: 100px 50px;
-  .teamContainer{
+
+  .teamContainer {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    @media screen and (max-width: $lg) {
+    padding: 0 10%;
+    @media screen and (max-width: $md) {
       justify-content: center;
       align-items: stretch;
     }
@@ -15,43 +17,31 @@
       justify-content: center;
       align-items: stretch;
     }
-    .person + .person{
-      margin-left: 40px;
-      @media screen and (max-width: $lg) {
-        margin-left: 20px;
-      }
-      @media screen and (max-width: $sm) {
-        margin-left: 20px;
-      }
-    }
     .person {
       display: flex;
       flex-direction: column;
-      width: 20%;
-      @media screen and (max-width: $lg) {
-        width: calc(50%- 75px);
-      }
-      @media screen and (max-width: $sm) {
-        width: $full-size-of-parent;
-      }
+      width: 270px;
       img {
         display: block;
         max-width: $full-size-of-parent;
         height: auto;
         margin: 0 auto;
       }
-      .social-icons{
+
+      .social-icons {
         margin-top: auto;
-        align-self: center;
+        align-self: flex-start;
         margin-bottom: 15px;
         display: flex;
-        li:hover a{
+
+        li:hover a {
           background: #E84545;
           border-color: #E84545;
           color: #fff;
         }
-        li{
-          a{
+
+        li {
+          a {
             border: 1px solid #e8ecee;
             border-radius: 2px;
             color: #c6cacc;
@@ -69,9 +59,10 @@
 
       .person-content {
         margin-top: 20px;
+        text-align: left;
+
         h4 {
           display: block;
-          text-align: center;
           margin-bottom: 10px;
           font-size: 22px;
           color: #2d3033;
@@ -80,7 +71,6 @@
 
         h5 {
           display: block;
-          text-align: center;
           color: #e84545;
           font-size: 13px;
           font-weight: 400;
@@ -89,7 +79,6 @@
 
         p {
           display: block;
-          text-align: center;
           margin-bottom: 10px;
           font-size: $common-font-size;
           line-height: 22.4px;
